Images and Dynamic Image Loading into ListView

--- a/ImageTransformation.csproj
+++ b/ImageTransformation.csproj
@@ -6,4 +6,26 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Images\Autmn.jpg" />
+    <None Remove="Images\Autumn_2.jpg" />
+    <None Remove="Images\Cat.jpg" />
+    <None Remove="Images\Pug.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\Autmn.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\Autumn_2.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\Cat.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\Pug.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
 </Project>
